--- a/FrontEnd/src/app/Components/order-list/order-list.component.html
+++ b/FrontEnd/src/app/Components/order-list/order-list.component.html
@@ -1,4 +1,13 @@
-<div *ngFor="let order of orders" class=" mx-auto sm:w-full">
+<div class="w-1/4 ml-auto">
+    <!-- <label for="ordersStatue" class="block mb-2 text-base font-medium text-gray-900 dark:text-white">Select an
+        option</label> -->
+    <select #input (change)="update(input)" id="ordersStatue"
+        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+        <option selected value="0">On Hold</option>
+        <option value="1">Finished</option>
+    </select>
+</div>
+<div *ngFor="let order of Admin.orders" class=" mx-auto sm:w-full">
     <app-order [order]="order"></app-order>
 </div>
-<h1 class="text-3xl font-bold text-center mt-10" *ngIf="orders.length==0">There Are No Orders Yet !</h1>
+<h1 class="text-3xl font-bold text-center mt-10" *ngIf="Admin.orders.length==0">There Are No Orders Yet !</h1>
